# w2g_discord_bot

./: Cargo.toml  Dockerfile  Jenkinsfile
src/: main.rs  w2g_api.rs  w2g_api_client.rs  w2g_api_models.rs
