[package]
name = "w2g_discord_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11", features = ["client", "framework"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.12.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
